--- a/src/sass/page/_top-info.scss
+++ b/src/sass/page/_top-info.scss
@@ -1,37 +1,37 @@
 @use "global" as *;
 .top-info {
   background-color: $light-green;
+}
+.top-info-wrapper {
   margin-top: rem(70);
   padding: rem(80) 0;
-}
-@include mq("md") {
-  .top-info {
+  @include mq("md") {
     margin-top: rem(164);
     padding: rem(100) 0 rem(76);
   }
 }
 //ダイビング情報コンテンツ周り
-.top-info-wrapper {
+.top-info__content-wrapper {
   max-width: rem(500);
   width: 100%;
-  margin: rem(28) auto rem(0) auto;
+  margin-top: rem(28);
   display: grid;
   grid-template-columns: 1fr;
   text-align: left;
   row-gap: rem(24);
-}
-
-@include mq("md") {
-  .top-info-wrapper {
+  @include mq("md") {
     max-width: rem(1080);
     grid-template-columns: 1fr 1fr;
-    margin: rem(40) auto rem(0) auto;
+    margin-top: rem(40);
   }
 }
 //ダイビング情報写真
 .top-info__img {
   position: relative;
   aspect-ratio: 540/356;
+  @include mq("md") {
+    aspect-ratio: 345/227;
+  }
 }
 .top-info__img > img {
   position: absolute;
@@ -41,10 +41,4 @@
   left: 50%;
   transform: translate(-50%, -50%);
   object-fit: cover;
-}
-
-@include mq("md") {
-  .top-info__img {
-    aspect-ratio: 345/227;
-  }
 }
