--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -1,25 +1,19 @@
 @use "global" as *;
-.contact {
-  position: relative;
-}
-//お問い合わせ全体
+//お問い合わせコンテンツ全体
 .contact-wrapper {
   margin: rem(54) auto 0 auto;
-}
-@include mq("md") {
-  .contact-wrapper {
+  @include mq("md") {
+    position: relative;
     margin: rem(140) auto 0 auto;
   }
 }
-//お問い合わせインナー
-.contact-inner {
+//お問い合わせコンテンツインナー
+.contact__content-inner {
   text-align: center;
   align-items: center;
   display: flex;
   flex-direction: column;
-}
-@include mq("md") {
-  .contact-inner {
+  @include mq("md") {
     padding: rem(70) rem(112) rem(70) rem(50);
     max-width: rem(1080);
     width: 100%;
@@ -27,7 +21,6 @@
     box-shadow: rem(2) rem(2) rem(10) rgba($color: #000000, $alpha: 0.25);
   }
 }
-
 //お問い合わせ装飾
 .contact-decoration {
   position: absolute;
@@ -36,9 +29,7 @@
   max-width: rem(109);
   width: 29%;
   z-index: 10;
-}
-@include mq("md") {
-  .contact-decoration {
+  @include mq("md") {
     top: -8.5%;
     right: calc(50% - min(48.4vw, 41.75rem));
     max-width: rem(301);
@@ -48,9 +39,7 @@
 //お問い合わせ左側周り
 .contact__info-wrapper {
   margin-top: rem(16);
-}
-@include mq("md") {
-  .contact__info-wrapper {
+  @include mq("md") {
     margin-top: rem(18);
   }
 }
@@ -64,9 +53,7 @@
   max-width: rem(295);
   width: 100%;
   margin: 0 auto;
-}
-@include mq("md") {
-  .contact__info {
+  @include mq("md") {
     border-top: solid rem(1) $green;
     flex-direction: row;
     text-shadow: none;
@@ -79,6 +66,9 @@
 .contact__address {
   width: 100%;
   text-align: center;
+  @include mq("md") {
+    text-align: left;
+  }
 }
 .contact__address p {
   margin-top: rem(4);
@@ -87,18 +77,10 @@
 .contact__address p:first-child {
   margin-top: rem(0);
 }
-
-@include mq("md") {
-  .contact__address {
-    text-align: left;
-  }
-}
 //お問い合わせ住所の周り
 .contact__address-wrapper {
   width: 100%;
-}
-@include mq("md") {
-  .contact__address-wrapper {
+  @include mq("md") {
     padding-right: rem(80);
     width: 100%;
     border-right: solid rem(1) $green;
@@ -112,6 +94,12 @@
   background-color: #d9d9d9;
   margin: rem(16) auto 0 auto;
   text-shadow: 0 rem(4) rem(4) rgba($color: #000, $alpha: 0.25);
+  @include mq("md") {
+    aspect-ratio: 273/148;
+    margin-top: 0;
+    text-shadow: none;
+    width: 164%;
+  }
 }
 .contact__map > iframe {
   position: absolute;
@@ -122,20 +110,10 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
-@include mq("md") {
-  .contact__map {
-    aspect-ratio: 273/148;
-    margin-top: 0;
-    text-shadow: none;
-    width: 164%;
-  }
-}
 //お問い合わせ右側
 .contact__content {
   margin-top: rem(40);
-}
-@include mq("md") {
-  .contact__content {
+  @include mq("md") {
     margin-top: rem(0);
     margin-left: rem(80);
   }
@@ -147,10 +125,7 @@
   line-height: 1.2857;
   font-size: rem(14);
   text-shadow: 0 rem(4) rem(4) rgba($color: #000, $alpha: 0.25);
-}
-
-@include mq("md") {
-  .contact-text {
+  @include mq("md") {
     text-shadow: none;
     margin-top: rem(8);
   }
