--- a/src/sass/module/_inner.scss
+++ b/src/sass/module/_inner.scss
@@ -35,3 +35,9 @@
     overflow: visible;
   }
 }
+.inner--maxWidth540 {
+  max-width: rem(540);
+  @include mq("md") {
+    max-width: auto;
+  }
+}
