--- a/src/sass/page/_top-about-us.scss
+++ b/src/sass/page/_top-about-us.scss
@@ -1,11 +1,9 @@
 @use "global" as *;
 //トップabout us全体
-.top-about-us {
+.top-about-us-wrapper {
   position: relative;
   margin-top: rem(80);
-}
-@include mq("md") {
-  .top-about-us {
+  @include mq("md") {
     margin-top: rem(140);
   }
 }
@@ -14,9 +12,7 @@
   max-width: rem(500);
   width: 100%;
   margin: rem(28) auto 0 auto;
-}
-@include mq("md") {
-  .top-about-us__img-wrapper {
+  @include mq("md") {
     margin: rem(40) auto 0 auto;
     max-width: rem(1100);
     width: 100%;
@@ -25,9 +21,7 @@
 //トップabout us装飾
 .top-about-us__decoration {
   display: none;
-}
-@include mq("md") {
-  .top-about-us__decoration {
+  @include mq("md") {
     display: block;
     position: absolute;
     bottom: -11%;
@@ -42,9 +36,7 @@
   display: grid;
   grid-template-columns: 1fr;
   row-gap: rem(13);
-}
-@include mq("md") {
-  .top-about-us__texts {
+  @include mq("md") {
     width: min(rem(840), 80%);
     position: absolute;
     grid-template-columns: 1fr 1fr;
@@ -59,9 +51,7 @@
   line-height: 1;
   font-family: $title-font-family;
   color: $green;
-}
-@include mq("md") {
-  .top-about-us__main-text {
+  @include mq("md") {
     font-size: rem(80);
     line-height: 1.2;
     color: $white;
@@ -70,10 +60,7 @@
 .top-about-us__text {
   margin-top: rem(16);
   font-weight: $regular;
-}
-
-@include mq("md") {
-  .top-about-us__text {
+  @include mq("md") {
     margin-top: rem(0);
   }
 }
