--- a/src/sass/page/_top-price.scss
+++ b/src/sass/page/_top-price.scss
@@ -1,12 +1,10 @@
 @use "global" as *;
 //トップ料金セクション
-.top-price-section {
+.top-price-wrapper {
   padding: rem(82) 0;
   background-color: $light-green;
   margin-top: rem(80);
-}
-@include mq("md") {
-  .top-price-section {
+  @include mq("md") {
     margin-top: rem(140);
     padding: rem(100) 0 rem(105) 0;
     position: relative;
@@ -16,15 +14,12 @@
 .top-price__contents-wrapper {
   display: flex;
   flex-direction: column;
-  max-width: rem(500);
   width: 100%;
-  margin: rem(28) auto auto;
-}
-@include mq("md") {
-  .top-price__contents-wrapper {
+  margin-top: rem(28);
+  @include mq("md") {
     flex-direction: row-reverse;
     column-gap: rem(93);
-    margin: rem(40) auto 0 auto;
+    margin-top: rem(40);
     max-width: rem(1077);
     width: 100%;
   }
@@ -34,9 +29,7 @@
 .top-price__contents {
   width: 100%;
   margin-top: rem(40);
-}
-@include mq("md") {
-  .top-price__contents {
+  @include mq("md") {
     width: 50%;
     margin-top: rem(0);
   }
@@ -56,9 +49,7 @@
   display: flex;
   margin-top: rem(8);
   column-gap: rem(15);
-}
-@include mq("md") {
-  .top-price__menus {
+  @include mq("md") {
     font-size: rem(16);
     line-height: 1.5;
   }
@@ -77,6 +68,10 @@
   width: 100%;
   position: relative;
   aspect-ratio: 345/227;
+  @include mq("md") {
+    width: 50%;
+    aspect-ratio: 746/492;
+  }
 }
 .top-price__img > source {
   position: absolute;
@@ -87,19 +82,10 @@
   transform: translate(-50%, -50%);
   object-fit: cover;
 }
-@include mq("md") {
-  .top-price__img {
-    width: 50%;
-    aspect-ratio: 746/492;
-  }
-}
-
 //装飾
 .top-price__decoration {
   display: none;
-}
-@include mq("md") {
-  .top-price__decoration {
+  @include mq("md") {
     display: block;
     position: absolute;
     bottom: 4.7%;
