--- a/src/sass/module/_hamburger.scss
+++ b/src/sass/module/_hamburger.scss
@@ -29,14 +29,14 @@
   bottom: 0;
 }
 
-#hamburger.active span:nth-of-type(1) {
+#js-hamburger.active span:nth-of-type(1) {
   -webkit-transform: translateY(rem(11)) rotate(37deg);
   transform: translateY(rem(11)) rotate(37deg);
 }
-#hamburger.active span:nth-of-type(2) {
+#js-hamburger.active span:nth-of-type(2) {
   opacity: 0;
 }
-#hamburger.active span:nth-of-type(3) {
+#js-hamburger.active span:nth-of-type(3) {
   -webkit-transform: translateY(rem(-11)) rotate(-37deg);
   transform: translateY(rem(-11)) rotate(-37deg);
 }
