--- a/src/sass/module/_title.scss
+++ b/src/sass/module/_title.scss
@@ -9,33 +9,23 @@
   flex-shrink: 0;
   margin-top: auto;
 }
-.title--big {
+.title--fontSize20 {
   font-size: rem(20);
   line-height: 1.2;
   padding-bottom: rem(4);
+  @include mq("md") {
+    font-size: rem(24);
+  }
 }
-.title--blog {
+.title--padding-bottom4 {
   padding-bottom: rem(4);
 }
-.title--price {
-  padding-bottom: rem(4);
-}
-
 .title--voice {
   font-size: rem(16);
   padding-bottom: rem(4);
   font-weight: 500;
   line-height: 1.4375;
-}
-@include mq("md") {
-  .title--big {
-    font-size: rem(24);
-  }
-  .title--info {
-    font-size: rem(24);
-    line-height: 1;
-  }
-  .title--voice {
+  @include mq("md") {
     font-size: rem(24);
   }
 }
