--- a/src/sass/module/_contact.scss
+++ b/src/sass/module/_contact.scss
@@ -7,6 +7,13 @@
     margin: rem(140) auto 0 auto;
   }
 }
+//お問い合わせインナー
+.contact__inner {
+  max-width: rem(540);
+  @include mq("md") {
+    max-width: auto;
+  }
+}
 //お問い合わせコンテンツインナー
 .contact__content-inner {
   text-align: center;
