--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -12,6 +12,13 @@
     position: relative;
   }
 }
+//トップブログインナー
+.top-info__inner {
+  max-width: rem(540);
+  @include mq("md") {
+    max-width: auto;
+  }
+}
 //トップブログカード周り
 .top-blog__cards-wrapper {
   margin-top: rem(28);
