--- a/src/sass/page/_top-info.scss
+++ b/src/sass/page/_top-info.scss
@@ -9,8 +9,14 @@
     padding: rem(100) 0 rem(76);
   }
 }
+.top-info__inner {
+  max-width: rem(540);
+  @include mq("md") {
+    max-width: auto;
+  }
+}
 //ダイビング情報コンテンツ周り
-.top-info__content-wrapper {
+.top-info__content {
   max-width: rem(500);
   width: 100%;
   margin-top: rem(28);
@@ -25,14 +31,14 @@
   }
 }
 //ダイビング情報写真
-.top-info__img {
+.top-info__content__img {
   position: relative;
   aspect-ratio: 540/356;
   @include mq("md") {
     aspect-ratio: 345/227;
   }
 }
-.top-info__img > img {
+.top-info__content__img > img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -40,4 +46,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   object-fit: cover;
+}
+//ダイビング情報ボタン
+.top-info__content__texts__btn-wrapper {
+  margin-top: rem(40);
 }
