--- a/src/sass/module/_header.scss
+++ b/src/sass/module/_header.scss
@@ -31,6 +31,15 @@
     height: inherit;
   }
 }
+//ヘッダーロゴ
+.header__logo {
+  width: rem(102);
+  height: auto;
+  @include mq("md") {
+    width: rem(133);
+    height: auto;
+  }
+}
 //ヘッダー日本語タイトル
 @include mq("md") {
   .header__section-titles__japanese {
@@ -38,6 +47,7 @@
     line-height: 1.5;
     color: $white;
     margin-top: rem(4);
+    text-align: center;
   }
 }
 //ヘッダー英語タイトル
@@ -47,6 +57,7 @@
     line-height: 1;
     color: $white;
     font-family: $title-font-family;
+    text-align: center;
   }
 }
 //ヘッダー中身、クリック領域広げる
@@ -57,27 +68,27 @@
 }
 //ヘッダーpc-nav
 
-.header__inner__pc-nav {
+.header__pc-nav {
   display: none;
 }
 
 @include mq("md") {
-  .header__inner__pc-nav {
+  .header__pc-nav {
     display: block;
     height: inherit;
   }
-  .header__inner__pc-nav ul {
+  .header__pc-nav ul {
     display: flex;
     flex-direction: row;
     gap: rem(40);
     height: inherit;
   }
-  .header__inner__pc-nav li {
+  .header__pc-nav li {
     display: inline-block;
     height: inherit;
   }
 
-  .header__inner__pc-nav li a {
+  .header__pc-nav li a {
     /*線の基点とするためrelativeを指定*/
     position: relative;
     height: inherit;
@@ -85,12 +96,12 @@
     align-content: center;
   }
 
-  .header__inner__pc-nav li.current a,
-  .header__inner__pc-nav li a:hover {
+  .header__pc-nav li.current a,
+  .header__pc-nav li a:hover {
     color: $white;
   }
 
-  .header__inner__pc-nav li a::after {
+  .header__pc-nav li a::after {
     content: "";
     position: absolute;
     bottom: rem(27);
@@ -103,8 +114,8 @@
     transform-origin: center top; /*上部中央基点*/
   }
   /*現在地とhoverの設定*/
-  .header__inner__pc-nav li.current a::after,
-  .header__inner__pc-nav li a:hover::after {
+  .header__pc-nav li.current a::after,
+  .header__pc-nav li a:hover::after {
     transform: scale(1, 1);
   }
 }
@@ -131,9 +142,55 @@
   }
 }
 //sp-navの中身
-.header__sp-nav__siteMap__contents {
+.header__site-map {
   height: calc(100vh - rem(80));
   margin: rem(-17) auto 0 auto;
   max-width: rem(500);
   column-gap: rem(8);
+}
+//ハンバーガーメニュー
+.header__hamburger {
+  position: relative;
+  width: rem(32);
+  height: rem(24);
+  cursor: pointer;
+}
+.header__hamburger span {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: rem(1);
+  background-color: $white;
+}
+.header__hamburger,
+.header__hamburger span {
+  display: inline-block;
+  transition: all 0.5s;
+  box-sizing: border-box;
+}
+.header__hamburger span:nth-of-type(1) {
+  top: 0;
+}
+.header__hamburger span:nth-of-type(2) {
+  top: rem(12);
+}
+.header__hamburger span:nth-of-type(3) {
+  bottom: 0;
+}
+
+#js-header__hamburger.active span:nth-of-type(1) {
+  -webkit-transform: translateY(rem(11)) rotate(37deg);
+  transform: translateY(rem(11)) rotate(37deg);
+}
+#js-header__hamburger.active span:nth-of-type(2) {
+  opacity: 0;
+}
+#js-header__hamburger.active span:nth-of-type(3) {
+  -webkit-transform: translateY(rem(-11)) rotate(-37deg);
+  transform: translateY(rem(-11)) rotate(-37deg);
+}
+@include mq("md") {
+  .header__hamburger {
+    display: none;
+  }
 }
