--- a/src/sass/module/_info.scss
+++ b/src/sass/module/_info.scss
@@ -1,17 +1,17 @@
 @use "global" as *;
 //ダイビング情報タイトル・テキスト周り
 @include mq("md") {
-  .info__content__texts {
+  .info__texts {
     padding-left: rem(48);
     align-content: center;
   }
 }
 //ダイビング情報テキスト
-.info__content__text {
+.info__text {
   margin-top: rem(8);
 }
 //ダイビング情報タイトル
-.info__content__texts__title {
+.info__title {
   font-size: rem(20);
   line-height: 1.2;
   padding-bottom: rem(4);
