--- a/src/sass/module/_site-map.scss
+++ b/src/sass/module/_site-map.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 //サイトマップ
-.siteMap-contents {
+.site-map {
   max-width: rem(500);
   margin: 0 auto;
   width: 100%;
@@ -19,15 +19,15 @@
 }
 //SPのときに2つに分かれるようにするため
 @include mq("md") {
-  .siteMap-sp-layout {
+  .site-map__sp-layout {
     row-gap: 2.5rem;
     display: flex;
     column-gap: rem(120);
   }
 }
 //リストマーク付きのところ
-.siteMap-main-title {
-  background: url(../../assets/images/common/site-map-list-icon.png) no-repeat 0 0;
+.site-map__main-title {
+  background: url(../../assets/images/common/site-map__list-icon.png) no-repeat 0 0;
   background-size: auto rem(18);
   padding-left: rem(22);
   line-height: 1.125;
@@ -36,23 +36,23 @@
   list-style: none;
 }
 //リストマークつかないところ
-.siteMap-sub-title {
+.site-map__sub-title {
   margin-left: rem(22);
   margin-top: rem(24);
   line-height: 1.125;
 }
 //PCの時並べ替え
 @include mq("md") {
-  .siteMap-main--order1 {
+  .site-map__main--order1 {
     order: 1;
   }
-  .siteMap-main--order2 {
+  .site-map__main--order2 {
     order: 2;
   }
-  .siteMap-main--order3 {
+  .site-map__main--order3 {
     order: 3;
   }
-  .siteMap-main--order4 {
+  .site-map__main--order4 {
     order: 4;
   }
 }
