--- a/src/sass/page/_top-campaign.scss
+++ b/src/sass/page/_top-campaign.scss
@@ -8,7 +8,7 @@
   }
 }
 //トップキャンペーンスライダー周り
-.top-campaign__wrapper {
+.top-campaign__slider-wrapper {
   margin-top: rem(27);
   padding-bottom: rem(10);
   z-index: 10;
