--- a/src/sass/page/_top-price.scss
+++ b/src/sass/page/_top-price.scss
@@ -18,7 +18,7 @@
   }
 }
 //トップ料金、メニュー＆写真全体
-.top-price__inner__contents-wrapper {
+.top-price__contents-wrapper {
   display: flex;
   flex-direction: column;
   width: 100%;
@@ -33,7 +33,7 @@
 }
 
 //トップ料金、メニュー全体
-.top-price__inner__contents-wrapper__contents {
+.top-price__contents {
   width: 100%;
   margin-top: rem(40);
   @include mq("md") {
@@ -42,15 +42,15 @@
   }
 }
 //トップ料金、カテゴリーごと
-.top-price__inner__contents-wrapper__content {
+.top-price__content {
   margin-top: rem(40);
 }
-.top-price__inner__contents-wrapper__content:first-child {
+.top-price__content:first-child {
   margin-top: 0;
 }
 
 //トップ料金、メニュー名＆料金
-.top-price__inner__contents-wrapper__content__menu {
+.top-price__menu {
   font-size: rem(14);
   line-height: 1.71428;
   display: flex;
@@ -62,16 +62,16 @@
   }
 }
 //トップ料金&メニュー名
-.top-price__inner__contents-wrapper__content__menu__name {
+.top-price__name {
   width: 80%;
 }
 //トップ料金、料金
-.top-price__inner__contents-wrapper__content__menu__yen {
+.top-price__yen {
   width: 20%;
   text-align: end;
 }
 //トップ料金、写真
-.top-price__inner__contents-wrapper__img {
+.top-price__img {
   width: 100%;
   position: relative;
   aspect-ratio: 345/227;
@@ -80,7 +80,7 @@
     aspect-ratio: 746/492;
   }
 }
-.top-price__inner__contents-wrapper__img > source {
+.top-price__img > source {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -90,11 +90,11 @@
   object-fit: cover;
 }
 //トップ料金、メニュー名
-.top-price__inner__contents-wrapper__content__title {
+.top-price__title {
   padding-bottom: rem(4);
 }
 //装飾
-.top-price__inner__decoration {
+.top-price__decoration {
   display: none;
   @include mq("md") {
     display: block;
