--- a/src/sass/page/_top-about-us.scss
+++ b/src/sass/page/_top-about-us.scss
@@ -66,6 +66,8 @@
 }
 .top-about-us__btn-wrapper {
   margin-top: rem(25);
+  text-align: center;
+  padding-bottom: rem(5);
   @include mq("md") {
     margin-top: rem(40);
   }
