--- a/src/sass/module/_blog-card.scss
+++ b/src/sass/module/_blog-card.scss
@@ -26,6 +26,13 @@
   margin-top: rem(18);
 }
 .blog-card__title {
+  overflow-wrap: anywhere;
+  font-size: rem(16);
+  line-height: 1.5;
+  border-bottom: solid rem(1) $green;
+  font-weight: $bold;
+  flex-shrink: 0;
+  margin-top: auto;
   padding-bottom: rem(4);
 }
 .blog-card__text {
