--- a/src/sass/page/_top-price.scss
+++ b/src/sass/page/_top-price.scss
@@ -91,6 +91,13 @@
 }
 //トップ料金、メニュー名
 .top-price__title {
+  overflow-wrap: anywhere;
+  font-size: rem(16);
+  line-height: 1.5;
+  border-bottom: solid rem(1) $green;
+  font-weight: $bold;
+  flex-shrink: 0;
+  margin-top: auto;
   padding-bottom: rem(4);
 }
 //装飾
@@ -104,5 +111,13 @@
     max-width: rem(437);
     width: 30.7%;
     z-index: 10;
+  }
+}
+.top-price__btn-wrapper {
+  margin-top: rem(40);
+  text-align: center;
+  padding-bottom: rem(5);
+  @include mq("md") {
+    margin-top: rem(80);
   }
 }
