--- a/src/sass/page/_top-blog.scss
+++ b/src/sass/page/_top-blog.scss
@@ -14,23 +14,33 @@
 }
 //トップブログ セクションタイトル
 .top-blog__section-titles {
-  color: $white;
+  text-align: center;
 }
 .top-blog__section-titles__english {
+  color: $black;
   font-family: $title-font-family;
   font-size: rem(32);
   line-height: 1.25;
   @include mq("md") {
+    color: $white;
     font-size: rem(40);
     line-height: 1;
   }
 }
+.top-blog__section-titles__english::first-letter {
+  color: $green;
+  @include mq("md") {
+    color: $white;
+  }
+}
 .top-blog__section-titles__japanese {
+  color: $green;
   font-size: rem(12);
   font-weight: $regular;
   line-height: 1.5;
   margin-top: rem(4);
   @include mq("md") {
+    color: $white;
     margin-top: rem(8);
     font-size: rem(10);
   }
