--- a/src/sass/module/_about-us.scss
+++ b/src/sass/module/_about-us.scss
@@ -1,6 +1,6 @@
 @use "global" as *;
 //トップabout us全体
-.top-about-us-wrapper {
+.about-us-wrapper {
   position: relative;
   margin-top: rem(80);
   @include mq("md") {
@@ -8,7 +8,7 @@
   }
 }
 //トップabout us画像全体
-.top-about-us__img-wrapper {
+.about-us__img-wrapper {
   max-width: rem(500);
   width: 100%;
   margin: rem(28) auto 0 auto;
@@ -19,7 +19,7 @@
   }
 }
 //トップabout us装飾
-.top-about-us__decoration {
+.about-us__decoration {
   display: none;
   @include mq("md") {
     display: block;
@@ -31,7 +31,7 @@
   }
 }
 //トップのみテキスト全体
-.top-about-us__texts {
+.about-us__texts {
   margin-top: rem(41);
   display: grid;
   grid-template-columns: 1fr;
@@ -46,7 +46,7 @@
     right: calc(50% - min(48.4vw, 31rem));
   }
 }
-.top-about-us__main-text {
+.about-us__main-text {
   font-size: rem(40);
   line-height: 1;
   font-family: $title-font-family;
@@ -57,18 +57,71 @@
     color: $white;
   }
 }
-.top-about-us__text {
+.about-us__text {
   margin-top: rem(16);
   font-weight: $regular;
   @include mq("md") {
     margin-top: rem(0);
   }
 }
-.top-about-us__btn-wrapper {
+.about-us__btn-wrapper {
   margin-top: rem(25);
   text-align: center;
   padding-bottom: rem(5);
   @include mq("md") {
     margin-top: rem(40);
+  }
+}
+//about us画像全体
+.about-us__img {
+  display: flex;
+  flex-direction: row;
+}
+//about us背景画像左側
+.about-us__img-left {
+  margin-bottom: rem(18);
+  position: relative; //写真比率管理用
+  aspect-ratio: 128 / 194;
+  width: 37.03%;
+  z-index: 0;
+}
+.about-us__img-left > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+@include mq("md") {
+  .about-us__img-left {
+    margin-bottom: rem(55);
+    aspect-ratio: 400 / 606;
+  }
+}
+//about us背景画像右側
+.about-us__img-right {
+  margin-top: rem(26);
+  margin-left: rem(-64);
+  width: 83%;
+  aspect-ratio: 281 / 186;
+  position: relative; //写真比率管理用
+  z-index: -1;
+}
+.about-us__img-right > img {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  object-fit: cover;
+}
+@include mq("md") {
+  .about-us__img-right {
+    aspect-ratio: 880 / 581;
+    margin-top: rem(80);
+    margin-left: rem(-200);
   }
 }
